# price-comparison-scraper

./: .gitignore  main.py  pyproject.toml
price_scraper/price_scraper/: items.py  middlewares.py  pipelines.py  settings.py
price_scraper/price_scraper/extensions/: runtime_extension.py
price_scraper/price_scraper/spiders/: ryans_categories.py  ryans_product_details.py  startech_categories.py  startech_product_details.py
ryans_scraper/: laptops_2pages.json  ryans_categories.txt  scrapy.cfg
ryans_scraper/ryans_scraper/: items.py  middlewares.py  pipelines.py  settings.py
ryans_scraper/ryans_scraper/extensions/: runtime_extension.py
ryans_scraper/ryans_scraper/spiders/: ryans_categories.py  ryans_laptops.py  ryans_latptop_lite.py
