[project]
name = "price-comparison"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "colorlog>=6.9.0",
    "lxml>=5.3.1",
    "ruff>=0.10.0",
    "scrapy>=2.12.0",
    "scrapy-splash>=0.11.1",
]

[tool.ruff]
line-length = 120
